[gd_scene load_steps=24 format=3 uid="uid://jml0hprgbi6n"]

[ext_resource type="PackedScene" uid="uid://bpskafuab3c07" path="res://Scenes/sword.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://bhysqodvgtrok" path="res://Scenes/light.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://ciyfo7g877qr8" path="res://GuiElements/Textures/die.png" id="2_1eolk"]
[ext_resource type="PackedScene" uid="uid://bgjgn30nuvrb3" path="res://Scenes/hp_bar_player_2.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://b1iehbmuexwo1" path="res://Player/Player2/Textures/player_b2.png" id="3_fqop0"]
[ext_resource type="Script" uid="uid://djcqrs8ksyfu1" path="res://Player/Scripts/player_battle.gd" id="7"]
[ext_resource type="PackedScene" uid="uid://f35a2dk8xal2" path="res://Scenes/mana_player_2.tscn" id="8"]
[ext_resource type="PackedScene" uid="uid://c2aeevkukhjb3" path="res://Scenes/wand.tscn" id="14"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dsw4x"]
atlas = ExtResource("2_1eolk")
region = Rect2(0, 0, 14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_mijip"]
atlas = ExtResource("2_1eolk")
region = Rect2(15, 0, 14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_jirg5"]
atlas = ExtResource("2_1eolk")
region = Rect2(30, 0, 14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_uq2k0"]
atlas = ExtResource("2_1eolk")
region = Rect2(45, 0, 14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_uttuv"]
atlas = ExtResource("3_fqop0")
region = Rect2(0, 14, 10, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_0bq7i"]
atlas = ExtResource("3_fqop0")
region = Rect2(0, 0, 10, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7vhj"]
atlas = ExtResource("3_fqop0")
region = Rect2(10, 0, 10, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihnbi"]
atlas = ExtResource("3_fqop0")
region = Rect2(10, 14, 10, 14)

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsw4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mijip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jirg5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uq2k0")
}],
"loop": false,
"name": &"game_over",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uttuv")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bq7i")
}],
"loop": true,
"name": &"nothing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7vhj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihnbi")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(10, 14)

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(10, 14.2139)

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(2.62316, 1.32554)

[sub_resource type="Animation" id="5"]
length = 0.6
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bkoww"]
_data = {
&"invisible_frames": SubResource("5")
}

[sub_resource type="RectangleShape2D" id="6"]
size = Vector2(13.5159, 20.8868)

[node name="Player2Battle" type="CharacterBody2D" groups=["Player", "Player_2", "Player_Battle"]]
collision_layer = 2
collision_mask = 19
script = ExtResource("7")
currentPlayer = 2
otherPlayer = 1
right = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, 2)
sprite_frames = SubResource("1")
animation = &"walk"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 2)
shape = SubResource("2")

[node name="Dmg" type="Area2D" parent="."]
visible = false
position = Vector2(-1.24016, -1.24016)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dmg"]
position = Vector2(0.24016, 3.24016)
shape = SubResource("3")

[node name="RayCastRight" type="RayCast2D" parent="."]
visible = false
position = Vector2(3.1, 1.4)
rotation = -1.5708
target_position = Vector2(0, 2)

[node name="RayCastLeft" type="RayCast2D" parent="."]
visible = false
position = Vector2(-4.8, 1.4)
rotation = 1.5708
target_position = Vector2(0, 2)

[node name="HitBox" type="Area2D" parent="."]
position = Vector2(0.148819, 0.347244)
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-3.91913, 8.65276)
scale = Vector2(1.7, 1)
shape = SubResource("4")

[node name="HitBox2" type="Area2D" parent="."]
position = Vector2(0.148819, 0.347244)
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox2"]
position = Vector2(1.61056, 8.65276)
scale = Vector2(1.7, 1)
shape = SubResource("4")

[node name="heal_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Walljump_Timer" type="Timer" parent="."]
wait_time = 0.25

[node name="damage_knockback" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CollisionTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.08

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="WandTimer" type="Timer" parent="."]
one_shot = true

[node name="ManaTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_bkoww")
}

[node name="Wand" parent="." instance=ExtResource("14")]
position = Vector2(-0.80978, 3.62029)

[node name="Sword" parent="." instance=ExtResource("1")]
position = Vector2(-1, 6)
sword_left = true
battle_mode = true
player = 2

[node name="Marker2D" type="Marker2D" parent="."]
visible = false

[node name="WaterDetecter" type="Area2D" parent="."]
visible = false
collision_layer = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaterDetecter"]
position = Vector2(-0.156694, -1.47244)
shape = SubResource("6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HPBar" parent="CanvasLayer" instance=ExtResource("3")]
visible = false
offset_left = 840.0
offset_top = 5.0
offset_right = 880.0
offset_bottom = 19.0
scale = Vector2(4.5, 3)

[node name="Mana" parent="CanvasLayer" instance=ExtResource("8")]
visible = false
offset_left = 879.0
offset_top = 46.0
offset_right = 919.0
offset_bottom = 60.0
scale = Vector2(3.5, 3)

[node name="PointLight2D" parent="." instance=ExtResource("2")]
visible = false
position = Vector2(-1, 1)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Walljump_Timer" to="." method="_on_Walljump_Timer_timeout"]
[connection signal="timeout" from="damage_knockback" to="." method="_on_damage_knockback_timeout"]
[connection signal="timeout" from="CollisionTimer" to="." method="_on_CollisionTimer_timeout"]
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_CoyoteTimer_timeout"]
[connection signal="timeout" from="JumpBufferTimer" to="." method="_on_JumpBufferTimer_timeout"]
[connection signal="timeout" from="WandTimer" to="." method="_on_WandTimer_timeout"]
[connection signal="timeout" from="ManaTimer" to="." method="_on_ManaTimer_timeout"]
[connection signal="body_entered" from="WaterDetecter" to="." method="_on_WaterDetecter_body_entered"]
